<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!</string>
    <string name="informe_valores_validos">Informe valores válidos!</string>

</resources>